# PyPCMB

./: README.md  pyproject.toml
pypcmb/core/: recommendation.py  simulation.py
pypcmb/interface/: cli.py  clitext.py
pypcmb/models/: building.py
